--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: digitalNum;
+    src: url(digital7.ttf);
+}
+
 #digits {
     height:45px;
     background-color: black;
@@ -11,9 +16,10 @@
 
 #calc {
     width:350px;
-    background-color: dimgray;
+    background: linear-gradient(340deg, rgba(128,128,128,1) 0%, rgba(192,192,192,1) 13%, rgba(203,203,203,1) 20%, rgba(255,255,255,1) 50%, rgba(192,192,192,1) 81%, rgba(255,255,255,1) 100%);
     height:350px;
     padding:25px;
+    border-radius: 20px;
 }
 
 .calcbutton {
