--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 #digits {
     height:45px;
     background-color: black;
+    font-family: digitalNum;
     color:limegreen;
     width:100%;
     font-size:2em;
